fix misuse of nautilus_file_is_desktop_directory

The issue is that when navigating into the Desktop directory, the slot
is replaced with a desktop window slot.

This happens because when checking if the current location is handled by
the current slot, the check was made for the actual Desktop directory
instead for the virtual Desktop.

To fix this, instead of checking if the location matches the actual dir,
check if it matches the right uri. A similar issue was in files-view
when creating a new folder, so also change that accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=771710